Remove API-use incompatible with JDK 17